fleetman-pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  minReadySeconds: 30
  replicas: 1 # It will create an instance of this pod
  selector:
    matchLabels:
      app: webapp
  template: # template for the pods
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: richardchesterwood/k8s-fleetman-webapp-angular:release0

# ---
# apiVersion: v1
# kind: Pod
# metadata:
#   name: webapp
#   labels:
#     app: webapp
#     release: "0"
# spec:
#   containers:
#   - name: webapp
#     image: richardchesterwood/k8s-fleetman-webapp-angular:release0
#
# ---
# apiVersion: v1
# kind: Pod
# metadata:
#   name: webapp-release-0-5
#   labels:
#     app: webapp
#     release: "0-5"
# spec:
#   containers:
#   - name: webapp
#     image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5

---
apiVersion: v1
kind: Pod
metadata:
  name: queue-release-1
  labels:
    app: queue
    release: "1"
spec:
  containers:
  - name: queue
    image: richardchesterwood/k8s-fleetman-queue:release1
