fleetman-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue
spec:
  # This defines which pods are going to be represented by this service
  # The service becames a netword endpoint for either other services
  # or maybe external users to connect to (i.e browser)
  selector:
    app: queue
    release: "1"

  ports:
    - name: http
      port: 8161
      nodePort: 30010

  type: NodePort #expose a port through the node

---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
spec:
  selector:
    app: webapp
    # release: "0-5"

  ports:
    - name: http
      port: 80
      nodePort: 30080

  type: NodePort
